--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
-Flask==3.1.0
-openai==1.65.4
-Pillow==11.1.0
-python-dotenv==1.0.1
-reportlab==4.3.1
+Flask>=3.1.0
+openai>=1.65.4
+Pillow>=11.1.0
+python-dotenv>=1.0.1
+reportlab>=4.3.1
+gunicorn>=23.0.0
