--- a/example.env
+++ b/example.env
@@ -2,4 +2,4 @@ OPENAI_ADDRESS=
 OPENAI_SECRET=
 MODEL_ID=
 WEB_LISTEN_ADDRESS=
-AUTH_API_URL=https://auth.yfzhou.fyi/auth/user
+AUTH_API_URL=https://auth.yfzhou.fyi/webapi/user
